--- a/style.css
+++ b/style.css
@@ -14,12 +14,11 @@
     margin-right: 10px;
     font-size: 17px;
 }
-header{
-    height: 80px;
-}
+
 #mainDiv{
     width: calc(100% - 20px);
     margin: 0 10px;
+    margin-top: 70px !important;
     box-shadow: .4px .4px .8px 1.7px #fff;
     border-radius: 8px;
     overflow: hidden;
@@ -98,7 +97,7 @@ h3 {
 	box-shadow: 0 0.4rem 0.8rem 0 rgba(0,0,0,.6);
 	transition: transform 150ms;
 }
-/* DESTOP VERSION STYLING */
+/*------- DESTOP VERSION STYLING --------*/
 @media (min-width: 1000px){
     #mainDiv{
         max-width: 1100px;
@@ -143,6 +142,7 @@ h3 {
     width: 100%;
     display: flex;
     flex-direction: column;
+    margin-top: 0;
 }
 #tableMainDiv {
     margin: 20px 10px;
@@ -239,7 +239,7 @@ td {
     #table_to_tweets{
         flex-direction: row;
         flex-wrap: wrap;
-        margin-top: 30px;
+        margin-top: 10px;
     }
     #tableMainDiv {
         margin: 20px 10px;
