--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ td {
     #table_to_tweets{
         flex-direction: row;
         flex-wrap: wrap;
-        margin-top: 10px;
+        margin-top: 0;
     }
     #tableMainDiv {
         margin: 20px 10px;
@@ -318,7 +318,7 @@ iframe {
 @media (min-width: 1000px){
     #videoTipsMainDiv{
         width: calc(100% - 20px);
-        margin: 30px 10px 20px;
+        margin: 0 10px 20px;
         box-shadow: .8px .6px .7px 1.8px #ccc;
         border-radius: 10px;
         place-items: center;
