--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ td {
     border-right: 2px solid rgb(173, 168, 168);;
     border-bottom: 2px solid rgb(173, 168, 168);;
     font-size: 17px;
-    color: #000;
+    color: rgba(0,0,0,.8);
 }
 
 /* Highlights Section Styling */
@@ -263,13 +263,24 @@ td {
         width: 470px;
         margin: 0;
     }
+    #highlight_to_tweets {
+        width: 470px;
+    }
     #tweetsMainDiv{
         width: 430px;
         padding: 10px 0;
         margin: 0 20px;
     }
-    #highlight_to_tweets {
-        width: 470px;
+    #highlight{
+        margin: 10px;
+        padding-right: 5px;
+    }
+    #highlight ul li{
+        line-height: 1.5;
+        font-size: 16px;
+        margin: 10px 0 0 25px;
+        color: rgba(0,0,0,.8);
+    
     }
 }
 
