--- a/style.css
+++ b/style.css
@@ -164,17 +164,16 @@ tr:nth-child(even) {
     background-color: #fff;
 }
 tr:nth-child(odd) {
-    background-color: #ddd;
-}
-table, tr:last-of-type {
-    border-bottom: 2px solid teal;
+    background-color: #f6f7fb;
 }
 th {
-    background: teal;
-    text-align: center;
+    background: #138750;
     width: 60px;
-    border-bottom: 2px solid rgb(173, 168, 168);
-    border-right: 2px solid rgb(173, 168, 168);
+    text-align: left;
+    padding-left: 5px;
+    font-size: 16px;
+    border-bottom: 2px solid #ddd;
+    border-right: 2px solid #ddd;
 }
 .smallWidth {
     width: 40px !important;
@@ -184,9 +183,9 @@ td {
     text-align: left;
     padding: 5px 0;
     padding-left: 3px;
-    border-right: 2px solid rgb(173, 168, 168);;
-    border-bottom: 2px solid rgb(173, 168, 168);;
-    font-size: 17px;
+    border-right: 2px solid #ddd;
+    border-bottom: 2px solid #ddd;
+    font-size: 16px;
     color: rgba(0,0,0,.8);
 }
 
@@ -209,7 +208,7 @@ td {
 }
 #highlight ul li{
     line-height: 1.5;
-    font-size: 17px;
+    font-size: 16px;
     margin: 10px 0 0 25px;
     color: rgba(0,0,0,.8);
 
@@ -257,6 +256,9 @@ td {
         text-align: left;
         padding-left: 7px;
     }
+    td {
+        color: rgba(0,0,0,.7);
+    }
     #deathColumn{
         border-right: none;
     }
@@ -280,6 +282,7 @@ td {
         margin: 0 10px;
     }
     #tweets {
+        height: 790px;
         overflow-y: scroll;
     }
     
@@ -318,7 +321,7 @@ td {
     justify-content: center;
     box-shadow: .3px .3px .7px 1.8px #ccc;
     border-radius: 10px;
-    margin: 10px 10px 20px;
+    margin: 10px 10px 0;
     padding: 8px 0;
 }
 iframe {
