--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
 :root{
     background-color: teal;
+    color: rgba(0,0,0,.9);
 }
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
     box-sizing: border-box;
     
 }
 #date {
     float: right;
     margin-right: 10px;
-    font-size: 17px;
-    color: rgba(0,0,0,.7);
+    font-size: 16px;
 }
 
 #mainDiv{
@@ -96,7 +96,7 @@ h3 {
 #tableMainDiv:hover,#highlight:hover,#tweetsMainDiv:hover,.videoTips:hover,#welcomeDiv:hover{
 	cursor: pointer;
 	box-shadow: 0 0.4rem 0.8rem 0 rgba(0,0,0,.6);
-	transition: 1s transform;
+	transition: .40s ease-in-out;
 }
 /*------- DESTOP VERSION STYLING --------*/
 @media (min-width: 1000px){
@@ -158,7 +158,6 @@ h3 {
 table{
     border-collapse: collapse;
     width: 450px;
-    color: #fff;  
 }
 tr:nth-child(even) {
     background-color: #fff;
@@ -167,8 +166,9 @@ tr:nth-child(odd) {
     background-color: #f6f7fb;
 }
 th {
-    background: #138750;
     width: 60px;
+    background: #138750;
+    color: #fff;
     text-align: left;
     padding-left: 5px;
     font-size: 16px;
@@ -186,7 +186,6 @@ td {
     border-right: 2px solid #ddd;
     border-bottom: 2px solid #ddd;
     font-size: 16px;
-    color: rgba(0,0,0,.8);
 }
 
 /*--------- Highlights Section Styling -----------*/
@@ -211,8 +210,6 @@ td {
     line-height: 1.5;
     font-size: 16px;
     margin: 10px 0 0 25px;
-    color: rgba(0,0,0,.7);
-
 }
 
 /* TWEETS SECTION STYLING */
@@ -259,7 +256,6 @@ td {
     td {
         text-align: left;
         padding-left: 6px;
-        color: rgba(0,0,0,.7);
     }
     #deathColumn{
         border-right: none;
