--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap');
 :root{
     background-color: teal;
-    color: rgba(0,0,0,.9);
+    color: rgba(0,0,0,.7);
 }
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto Mono', monospace;
+    font-family:  monospace;
     box-sizing: border-box;
     
 }
