--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
     padding: 0;
     font-family:  monospace;
     box-sizing: border-box;
-    
 }
 #date {
     float: right;
@@ -204,12 +203,13 @@ td {
     box-shadow: .3px .3px .7px 1px #ccc;
     border-radius: 5px;
     padding: 10px 0;
-    padding-right: 3px;
 }
 #highlight ul li{
-    line-height: 1.5;
     font-size: 16px;
     margin: 10px 0 0 25px;
+    padding-right: 8px;
+    line-height: 1.5;
+    text-align: justify;
 }
 
 /* TWEETS SECTION STYLING */
@@ -230,6 +230,9 @@ td {
     border-radius: 10px;
     margin-bottom: 20px;
 
+}
+.twitter-tweet {
+    font-size: 16px;
 }
 /* STYLING DESKTOP VERSION (TABLE TO TWEETS) */
 @media (min-width: 1000px){
