--- a/style.css
+++ b/style.css
@@ -221,20 +221,11 @@ td {
     padding: 10px 0;
     margin: 0 10px;
 }
-#tweets {
-    width: 100%;
-    border-radius: 10px;
-    padding: 0 0 10px;
-    height: 500px;
-    overflow: auto;
-}
 .tweet{
+    display: flex;
+    justify-content: center;
     border-radius: 5px;
-    margin-bottom: 20px;
 
-}
-.twitter-tweet {
-    font-size: 16px !important;
 }
 /* STYLING DESKTOP VERSION (TABLE TO TWEETS) */
 @media (min-width: 1000px){
@@ -281,11 +272,6 @@ td {
         padding: 10px 0;
         margin: 0 10px;
     }
-    #tweets {
-        height: 650px;
-        overflow-y: scroll;
-    }
-    
 }
 
 /* TABLET VERSION */
