--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 :root{
     background-color: teal;
     color: rgba(0,0,0,.7);
@@ -6,7 +7,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family:  monospace;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
 #date {
@@ -34,7 +35,7 @@
 #welcomeDiv {
     margin: 20px 15px 20px;
     box-shadow: .3px .3px .7px 1px #ccc;
-    border-radius: 10px;
+    border-radius: 5px;
     padding-top: 5px;
     padding-bottom: 15px;
 }
@@ -52,7 +53,7 @@ h2 {
 .subsequentDivs {
     margin: 4px 25px;
     box-shadow: .3px .3px .7px 1px #ccc;
-    border-radius: 10px;
+    border-radius: 5px;
     padding-top: 10px;
     padding-left: 10px;
     transition: .50s ease-in-out;
